app/assets/stylesheets/projects.css.less
.pagination {
	border: none;
	a {
		border: none;
	}
}

/**** Index *****/

#header {
	margin-right: auto;
	margin-left: auto;
	background-image: url(header_bg.png);
	background-repeat: no-repeat;
	height: 36px;
	width: 935px;
	margin-top: -22px;
	font-size: 14px;
	font-style: italic;
	color: #636363;
	padding-top: 20px;
	padding-left: 20px;
	background-position: center;
}
.section-header {
	margin-right: auto;
	margin-left: auto;
	width: 935px;
	font-size: 20px;
	margin-bottom: 20px;
	margin-top: 35px;
	color: #6b9199;
	border-bottom: 4px solid #6b9199;
}
.see-all a {
	font-size: 14px;
	color: #4a4848;
	a:hover {
		border-bottom: 1px dotted #636363;
	}
}
.offset1-5 {
	margin-left: 127px;
}
.more {
	font-size: 14px;
	color: #6b9199;
	float: right;
	display: block;
	margin-top: -18px;
}

/**** Project Partial *****/

.thumbnails ul {
  margin-left: 0px;
  margin-right: 0px;
  list-style: none;
  display: inline;
  *zoom: 1;
}
.thumbnails li {
  margin-left: 16px;
}
.thumbnail {
	background-color: #FFF;
	color: #4a4848;
	width: 213px;
}
.project-span {
	padding: 0px;
	margin: 0px;	
}
.ellipsisName {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	padding-top: 4px;
	padding-left: 4px;
	a {
		color: #4a4848;
		text-decoration: none;
		}
	a:hover {
		text-decoration: underline;
		color: #0088cc;
		}
}
.byline {
	padding-left: 6px;
	font-size: 12px;
	a {
		color: #4a4848;
		text-decoration: none;
	}
	a:hover {
		color: #0088cc;
		text-decoration: underline;
	}
}
.ellipsisDesc {
	text-overflow: ellipsis;
	overflow: hidden;
	height: 70px;
	padding-left: 4px;
	padding-right: 5px;
	font-size: 12px;
}
.project-footer {
	height: 60px;
	background-color: #f5f5f5;
	margin-top: -18px;
	padding-top: 15px;
	padding-right: 10px;
	padding-left: 10px;
}
.progress {
  overflow: hidden;
  height: 12px;
  margin-bottom: 18px;
  background-color: #c7c7c7;
  background-image: -moz-linear-gradient(top, #c5c5c5, #c9c9c9);
  background-image: -ms-linear-gradient(top, #c5c5c5, #c9c9c9);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#c5c5c5), to(#c9c9c9));
  background-image: -webkit-linear-gradient(top, #c5c5c5, #c9c9c9);
  background-image: -o-linear-gradient(top, #c5c5c5, #c9c9c9);
  background-image: linear-gradient(top, #c5c5c5, #c9c9c9);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c5c5c5', endColorstr='#c9c9c9', GradientType=0);
  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}
.progress .bar {
  width: 0%;
  height: 18px;
  color: #ffffff;
  font-size: 12px;
  text-align: center;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  background-color: #2b5862;
  background-image: -moz-linear-gradient(top, #2b5862 0%, #6b9199 100%);
  background-image: -ms-linear-gradient(top, #2b5862, #6b9199);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2b5862), to(#6b9199));
  background-image: -webkit-linear-gradient(top, #2b5862, #6b9199);
  background-image: -o-linear-gradient(top, #2b5862, #6b9199);
  background-image: linear-gradient(top, #2b5862, #6b9199);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2b5862', endColorstr='#6b9199', GradientType=0);
  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
  -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: width 0.6s ease;
  -moz-transition: width 0.6s ease;
  -ms-transition: width 0.6s ease;
  -o-transition: width 0.6s ease;
  transition: width 0.6s ease;
}
.money-raised {
	float: left;
	padding-right: 35px;
}
.time-left {
	float: left;
	padding-right: 15px;
}
.state {
	float: left;
	margin-top: -2px;
}
.label:hover {
  color: #ffffff;
  text-decoration: none;
}
.label-important:hover {
  background-color: #b94a48;
}
.label-warning:hover {
  background-color: #f89406;
}
.label-success:hover {
  background-color: #468847;
}
.label-inverse:hover {
  background-color: #333333;
}
.delete-x {
	position: absolute;
	z-index: 99;
	width: 11px;
	height: 16px;
	background: rgba(0, 0, 0, 0.4);
	padding-left: 5px;
	a {
		color: #FFF;
	}
	a:hover {
	    color: #AAA;
	    text-decoration: none;
	}
}
.video {
	display: block;
	padding-left: 15px;
}

.add {
	float: right;
}
.star_up {
	background-image: url(star_up.png);
	background-repeat: no-repeat;
	width: 19px;
	height: 17px;
}
.star_on {
	background-image: url(star_on.png);
	background-repeat: no-repeat;
	width: 19px;
	height: 17px;
	}
.add_show {
}

/******* Project Show *******/


.project-show {
	margin-top: 35px;
}
.replyBlock {
  padding: 0 0 0 15px;
  margin: 0 0 18px;
  border-left: 2px solid #eeeeee;
}
.replyBlock p {
  margin-bottom: 5px;
}

#comment_body a{
	font-weight: lighter;
	color: #6e6e6e;
	font-size: small;
	font-weight: bold;
}

#update_body a{
	font-weight: lighter;
	color: #6e6e6e;
	font-size: small;
	font-weight: bold;
}

.time {
	font-weight: lighter;
	color: #6e6e6e;
	font-size: smaller;
}

.username {
	font-weight: bold;
	font-size: 1.3em;
	color: #252525;
}

#projectWrapper{
        width: 1100px;
        margin: auto;
        padding: 10px;
	position: relative;
}

#projectMain {
	box-shadow: 0px px 10px black;
        -moz-box-shadow: 0px 0px 10px #000;
        -webkit-box-shadow: 0px 0px 10px #000;
	background: #DADAB5;
	width: 700px;
	min-height: 550px;
	margin-left: 300px;
	padding-left: 50px;
	padding-right: 50px;
}
	
#sideBar{
        position: absolute;
        margin: auto;
        top: 140px;
        li {
                list-style: none;
                line-height: 50px;
		font-size: 20px;
		margin-left: -20px;
		font-weight: bold;
        }
}

        
#projectHead {
	padding-top: 30px;
        li {
                display: inline;
                padding-left: 70px;
        }

        ul {
                list-style: none;
        }
}
        
#tabs {
	a{
	        text-decoration: none;
	}
}

.projectContributors{
	.userImage{ padding-right: 10px;}
	a { font-size: 14px;}
} 

.projectContributors {
        li {
                list-style: none;
        }
        a {
                text-decoration: none;
        }
        a:hover {   
                text-decoration: underline;
        }
}

.projectComments{
	.userImage{ padding-right: 10px; float: left;}
	a { font-size: 20px; font-weight: bold;}
	.comment { margin-top: 50px;}
}

.projectComments {
        li {
                list-style: none;
        }
        a {
                text-decoration: none;
        }
        a:hover {   
                text-decoration: underline;
        }
}

.projectUpdates {
	.userImage{ padding-right: 10px; float: left;}
	a { font-size: 20px; font-weight: bold;}
	.comment { margin-top: 50px;}
}

.projectUpdates {
        li {
                list-style: none;
        }
        a {
                text-decoration: none;
        }
        a:hover {   
                text-decoration: underline;
        }
}

#projectUpdates {
        padding-top: 20px;
        padding-bottom: 20px;
}
                

.projectUpdates {
        li {
                list-style: none;
        }
        a {
                text-decoration: none;
        }
        a:hover {   
                text-decoration: underline;
        }
}

.delete a {
	font-weight: lighter;
	color: #252525;
	text-decoration: underline;
}

.alert {
	a {
		text-decoration: none;
		color: #81683c;
		font-weight: bold;
		}
	a:hover {
		text-decoration: underline;
	}
}
        
.projectImage {
        padding-top: 20px;
        padding-bottom: 20px;
}

        
#editLink {
        position: absolute;
        top: 120px;
        right: 130px;
        width: 120px;
        height: 20px;
}

.row_center {
	margin-right: auto;
	margin-left: auto;
}

.update_title {
	font-size: 2em;
	padding-bottom: 5px;
	border-bottom: 2px dotted #8d8d8d;
	margin-bottom: 10px;
}

#update_form {
	background-color: #aaa;
	padding: 20px;
	margin-top: 30px;
}
.deleted {
	color: #6e6e6e;
	background-color: #dfdfdf;
	font-weight: bold;
	padding-right: 2px;
	padding-left: 2px;
}


.span1-5 {
  width: 113px;
}

/******* New/Edit Project ******/

#new-project {
	width: 830px;
	margin-right: auto;
	margin-left: auto;
}
.picture-btn {
	margin-top: -5px;
}
#error_explanation {
	margin: 0px;
	padding: 0px;
}
#error_explanation ul {
	margin: 0px;
	padding-left: 60px;
	padding-bottom: 20px;
	list-style: circle; 
}
#error_explanation li {
	margin: 0px;
	padding: 0px;
	display: list-item;
}

